# biyard

./: .gitignore  AGENT.md  AGENTS.md  CLAUDE.md  Cargo.toml  DEPLOYMENT_PLAN.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  docker-compose.yaml  package.json  pnpm-lock.yaml
api/: .dir-locals.el  Cargo.toml  Dockerfile  Makefile  build.rs
api/.claude/agents/: backend-api-implementer.md
api/src/: api_main.rs  app_state.rs  error.rs  lib.rs  main.rs
api/src/config/: aws_config.rs  dynamo_config.rs  mod.rs
api/src/controllers/: mod.rs
api/src/controllers/console/: console_handler.rs  mod.rs
api/src/controllers/landing/: landing_handler.rs  mod.rs
api/src/controllers/m1/: mod.rs
api/src/controllers/v1/: mod.rs
api/src/controllers/web/: mod.rs
api/src/features/: mod.rs
api/src/features/credentials/: mod.rs
api/src/features/session/: constants.rs  mod.rs
api/src/macros/: dynamo_macros.rs  mod.rs
api/src/tests/: macros.rs  mod.rs  test_context.rs
api/src/types/: composite_partition.rs  entity_type.rs  list_response.rs  mod.rs  pagination_query.rs  partition.rs
api/src/utils/: password_utils.rs  time_utils.rs
app/: Cargo.toml  Dockerfile  Makefile
app/assets/: tailwind.css
app/landing/: Cargo.toml
app/landing/src/: main.rs
app/landing/src/pages/: dao.rs
app/src/: app.rs  layout.rs  lib.rs  main.rs  route.rs
app/src/common/: auth.rs  mod.rs
app/src/common/components/: mod.rs
app/src/common/config/: environment.rs
app/src/common/macros/: dynamo.rs  dynamo_entity.rs
app/src/common/traits/: item_iter.rs
app/src/common/types/: entity_type.rs  error.rs  list_response.rs  partition.rs
app/src/common/utils/: mod.rs
app/src/features/: mod.rs
app/src/features/accounts/: mod.rs
app/src/features/console/: layout.rs  mod.rs
app/src/features/credentials/: i18n.rs  mod.rs
app/src/features/points/: mod.rs
app/src/features/projects/: mod.rs
app/src/features/tokens/: mod.rs
console/: AGENTS.md  CONSOLE_README.md  Cargo.toml  Dioxus.toml  Dockerfile  Makefile  build.rs  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.css  tsconfig.app.json  tsconfig.spec.json  vite.config.ts
console/.claude/agents/: frontend-developer.md
console/assets/: dx-components-theme.css  floor_chart.js  floor_price_chart.js
console/dapp/: buyback.html  exchange.html
console/playwright-report/: index.html
console/src/: App.tsx  app.rs  config.tsx  layout.rs  lib.rs  main.rs  route.rs
console/src/common/: auth.rs  dapp.rs  health.rs  logger.rs  mod.rs  openapi.rs  rpc.rs  run.rs
console/src/common/auth/: account_auth.rs  credential_auth.rs  enterprise_auth.rs  mod.rs  project_auth.rs
console/src/common/blockchain/: chain_stub.rs  dapp.rs  evm.rs  mod.rs
console/src/common/components/: mod.rs
console/src/common/config/: log_level.rs  web.rs
console/src/common/hooks/: use_infinite_query.rs
console/src/common/macros/: dynamo.rs  mod.rs
console/src/common/middlewares/: account_auth_layer.rs  api_domain_filter.rs  mod.rs  session_layer.rs
console/src/common/types/: api_doc_meta.rs  composite_partition.rs  entity_type.rs  error.rs  list_response.rs  mod.rs  organization_role.rs  partition.rs  supported_chain.rs
console/src/common/ui/: alert.rs  badge.rs  brand_avatar.rs  button.rs  card.rs  copy_button.rs  empty_state.rs  form.rs  format.rs  icons.rs  mod.rs  page_header.rs  spinner.rs  stat_card.rs  table.rs
console/src/common/utils/: class_utils.rs  mod.rs  password_utils.rs  s3_client.rs  time_utils.rs  user_password_utils.rs
console/src/components/layout/: ConsoleLayout.tsx  Sidebar.tsx
console/src/components/ui/: toaster.tsx
console/src/contexts/: AuthContext.tsx  BrandContext.tsx  ModeContext.tsx
console/src/features/: mod.rs
console/src/features/accounts/: i18n.rs  mod.rs
console/src/features/assets/: mod.rs
console/src/features/console/: i18n.rs  layout.rs  mod.rs
console/src/features/credentials/: i18n.rs  i18n.tsx  mod.rs
console/src/features/dashboard/: i18n.tsx
console/src/features/enterprises/: i18n.rs  mod.rs
console/src/features/landing/: mod.rs
console/src/features/points/: mod.rs
console/src/features/projects/: i18n.rs  i18n.tsx  mod.rs
console/src/features/settings/: i18n.tsx
console/src/features/tokens/: mod.rs
console/src/i18n/: config.ts
console/src/i18n/locales/: common.tsx
console/src/lib/: api-client.ts  date.ts  mock-data.ts
console/src/types/: state.ts
console/test-results/: .last-run.json
console/tests/: auth_tests.rs  claim_tests.rs  points_tests.rs  tokens_tests.rs  utils.ts
console/tests/common/: factories.rs  http.rs  mod.rs  tables.rs
landing/: .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  Makefile  eslint.config.js  package.json  pnpm-lock.yaml  vite.config.ts
landing/assets/: animations.css  demo-lemouton.css  scroll-animations.css  scroll-animations.js  scroll-reveal.js  three-cube.js
landing/public/: main.css  theme.css
landing/public/logos/: logo.json
landing/src/: App.spec.ts  App.tsx  app.rs  config.tsx  index.css  main.rs  route.rs  router.tsx
landing/src/assets/: index.tsx
landing/src/assets/icons/: index.tsx
landing/src/components/: ProtectedRoute.tsx  icons.tsx  mod.rs  section.tsx  user-nav.tsx  user_nav.rs
landing/src/components/button/: index.tsx
landing/src/contexts/: AuthContext.tsx
landing/src/i18n/: config.ts
landing/src/lib/: call.ts  logger.ts  utils.ts
landing/src/pages/: dao.tsx  home.rs  index.tsx  mod.rs  pricing.rs  signin.rs  signin.tsx  team.rs  wallet.rs  wallet.tsx
landing/src/types/: account.ts
landing/test-results/App-App-Smoke-Tests-should-navigate-to-signup-page-chromium/: video.webm
landing/test-results/App-App-Smoke-Tests-signin-page-should-have-sign-in-form-chromium/: video.webm
landing/tests/: user.setup.ts
sto/: AGENTS.md  Cargo.toml  Dioxus.toml  Dockerfile  Makefile  docker-compose.yaml  tailwind.css
sto/assets/: bootstrap.js  tailwind.css
sto/src/: app.rs  lib.rs  main.rs  route.rs
sto/src/common/: config.rs  logger.rs  mod.rs  run.rs
sto/src/features/: mod.rs
(+906 files in other folders)
