[workspace]
members = ["console", "landing"]
resolver = "2"

[workspace.package]
authors = ["Biyard"]
description = "Biyard"
repository = "https://github.com/biyard/biyard"
edition = "2024"

[workspace.dependencies]
serde_json = "1.0"
tracing = "0.1"
thiserror = "2"
chrono = "0.4"
base64 = "0.22"
async-trait = "0.1"
btracing = "0.1.6"
by-macros = { version = "0.6", git = "https://github.com/biyard/ratel.git", rev = "867cb9be7b173c92acdeefe237dd87b4adcaca1f" }
reqwest = { version = "0.12.12", features = ["blocking", "json", "multipart"] }
schemars = { version = "1.0.4", features = ["uuid1"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.15"
tokio = { version = "1.40.0", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
dioxus = { version = "=0.7.3" }
dioxus-cli-config = { version = "=0.7.3" }


dioxus-translate = { version = "0.1", git = "https://github.com/biyard/ratel.git", rev = "867cb9be7b173c92acdeefe237dd87b4adcaca1f", features = [
    "ko",
] }
aws-sdk-dynamodb = "1"
aws-sdk-s3 = "1"
serde_dynamo = { version = "4.3", features = ["aws-sdk-dynamodb+1"] }
ethers = { version = "2", features = ["abigen", "ws"] }
