[package]
name = "api"
version = "0.1.0"
authors.workspace = true
description.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
aws-config = "1.0"
aws-sdk-dynamodb = "1.96.0"
base64 = "0.22.1"
bcrypt = "0.16"
by-axum = { version = "0.2", git="https://github.com/biyard/ratel.git" }
by-macros = "0.6.13"
percent-encoding = "2.3.2"
serde.workspace = true
serde_dynamo = { version = "4.3", features = ["aws-sdk-dynamodb+1"] }
serde_json.workspace = true
serde_repr = "0.1.20"
serde_with = "3.15.1"
thiserror = "2.0.17"
tokio.workspace = true
tracing.workspace = true
uuid = { version = "1.0", features = ["v4", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
sha3 = "0.10.8"
hex = "0.4.3"
tower-sessions = "0.14.0"
async-trait = "0.1.89"
tower-http = "0.6.6"

[dev-dependencies]
tower = "0.5"

[features]
default = []
no-secret = []
bypass = []
