[package]
name = "app"
version = "0.1.0"
authors.workspace = true
description.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
dioxus = { version = "=0.7.3", features = ["router", "fullstack"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
serde_repr = "0.1.20"
by-macros = { workspace = true }
dioxus-translate = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
async-trait = { workspace = true }

# Server-only dependencies
tower-sessions = { version = "0.15.0", optional = true }
aws-config = { version = "1", optional = true }
aws-sdk-dynamodb = { workspace = true, optional = true }
aws-credential-types = { version = "1.2", optional = true }
serde_dynamo = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
uuid = { version = "1", features = ["v4", "serde"], optional = true }
validator = { version = "0.20", features = ["derive"], optional = true }
lambda_http = { version = "1", optional = true }
dioxus-server = { version = "=0.7.3", optional = true }
bcrypt = { version = "0.16", optional = true }
sha3 = { version = "0.10.8", optional = true }
hex = { version = "0.4.3", optional = true }

# Web-only dependencies
gloo-timers = { version = "0.3", features = ["futures"], optional = true }
getrandom = { version = "0.4", features = ["wasm_js"], optional = true }

# Shared
tracing-subscriber = { workspace = true }
tracing-wasm = "0.2.1"
dioxus-cli-config = "0.7.4"
dioxus-fullstack = "=0.7.3"
wasm-bindgen = "0.2"
web-sys = "0.3"
dioxus-core = "=0.7.3"
percent-encoding = "2"
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false, features = ["router"] }

[features]
default = ["full"]
full = []
web = [
    "dioxus/web",
    "gloo-timers",
    "getrandom",
]
server = [
    "dioxus/server",
    "dioxus-server",
    "tower-sessions",
    "aws-config",
    "aws-sdk-dynamodb",
    "aws-credential-types",
    "serde_dynamo",
    "tokio",
    "reqwest",
    "schemars",
    "uuid",
    "validator",
    "bcrypt",
    "sha3",
    "hex",
]
lambda = ["server", "lambda_http"]
