[package]
name = "sto"
version = "0.1.0"
authors.workspace = true
description.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
dioxus = { workspace = true, features = ["fullstack", "router"] }

serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
by-macros = { workspace = true }
dioxus-translate = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
percent-encoding = "2"

# Server-only
aws-config = { version = "1", optional = true }
aws-sdk-dynamodb = { workspace = true, optional = true }
aws-credential-types = { version = "1.2", optional = true }
serde_dynamo = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
uuid = { version = "1", features = ["serde", "v7"], optional = true }
schemars = { workspace = true, optional = true }
lambda_http = { version = "1", optional = true }

# Web-only
getrandom = { version = "0.4", features = ["wasm_js"], optional = true }
gloo-timers = { version = "0.3", features = ["futures"], optional = true }
serde-wasm-bindgen = { workspace = true, optional = true }

# Shared
tracing-subscriber = { workspace = true }
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "Location", "Navigator"] }
js-sys = "0.3"
dioxus-cli-config.workspace = true

[features]
default = ["full"]
full = []
web = ["dioxus/web", "getrandom", "gloo-timers", "serde-wasm-bindgen"]
server = [
    "aws-config",
    "aws-credential-types",
    "aws-sdk-dynamodb",
    "dioxus/server",
    "schemars",
    "serde_dynamo",
    "tokio",
    "uuid",
]
lambda = ["lambda_http", "server"]
